privacy and other static pages alignments

--- a/src/app/modules/about-vanavihari/about-vanavihari.component.scss
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.scss
@@ -1,7 +1,3 @@
-.about-banner {
-	min-height: 70vh;
-	background: rgba(0, 0, 0, 0.5) url("/assets/img/OUTER.jpg") fixed no-repeat center/cover;
-	background-blend-mode: overlay;
-
-
+.page-banner {
+    background-image: url('/assets/img/about_us-photo.jpg');
 }
