--- a/src/app/modules/tribal-community/tribal-community.component.html
+++ b/src/app/modules/tribal-community/tribal-community.component.html
@@ -1,6 +1,9 @@
 <app-layout>
     <div class="main">
-        <section class="tribal-community my-5 py-5a">
+        <section class="page-banner d-grid place-content-center">
+            <h1 class="display-3">Our tribal community</h1>
+        </section>
+        <section class="my-5 py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
