--- a/src/app/modules/tribal-community/tribal-community.component.scss
+++ b/src/app/modules/tribal-community/tribal-community.component.scss
@@ -1,10 +1,6 @@
-.tribal-community {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.page-banner {
+    background-image: url('/assets/img/tribal/1.jpg');
 }
-
-/* Main CSS */
 .grid-wrapper {
     display: grid;
     grid-gap: 10px;
