--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,40 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
 @use "./scss/base/" as *;
 @use "./scss/components/" as *;
+
 html {
-    font-size: 15px;
-    @media(min-width:600px) {
-        font-size: 14px;
-    }
+  font-size: 15px;
+
+  @media(min-width:600px) {
+    font-size: 14px;
+  }
 }
+
 body {
   // font-size: 0.875rem;
   // background-color: $clr-light;
   font-family: "Inter", sans-serif;
   color: $clr-dark;
   overflow-x: hidden;
+
   &.dark-theme {
     background-color: $clr-dark;
     color: $clr-light;
   }
 }
+
 a {
   cursor: pointer;
 }
+
 img {
   max-width: 100%;
   height: auto;
 }
+
 .logo {
   width: min(65%, 200px);
 }
+
 .icon {
   width: 30px;
   // display: block;
 }
+
 .breadcrumb-item {
+
   // The separator between breadcrumbs (by default, a forward-slash: "/")
-  + .breadcrumb-item {
+  +.breadcrumb-item {
+
     //   padding-left: var(--#{$prefix}breadcrumb-item-padding-x);
     &::before {
       // float: left; // Suppress inline spacings and underlining of the separator
@@ -43,26 +54,32 @@ img {
       content: url(assets/images/icons/breadcrumbs-right-arrow.svg);
     }
   }
+
   // &.active {
   //   color: var(--#{$prefix}breadcrumb-item-active-color);
   // }
 }
+
 // material datepicker
 .mat-form-field {
   display: inline-flex;
 }
+
 .mat-form-field-infix {
   display: inline-flex !important;
   align-items: baseline;
   padding: 0 16px;
 }
+
 .mat-mdc-form-field-infix {
   width: 100px !important;
 }
+
 .mat-mdc-form-field-subscript-wrapper,
 .mat-mdc-form-field-bottom-align::before {
   display: none !important;
 }
+
 .card {
   // background: rgba(255, 255, 255, 0.4);
   // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -72,6 +89,7 @@ img {
   border-radius: 12px;
   // border: 1px solid rgba(255, 255, 255, 0.18);
 }
+
 .form-control {
   border: none;
   border-bottom: 2px solid $clr-secondary;
@@ -79,49 +97,65 @@ img {
   background-color: transparent;
 }
 
+.page-banner {
+  background: rgba(0, 0, 0, 0.508) fixed center / cover;
+  background-blend-mode: overlay;
+  color: white;
+  min-height: 70vh;
+}
+
 .breadcrumb {
   padding: 1rem 1.9rem;
 }
+
 .main-title {
   padding: $pad-main-title;
   line-height: 1;
 }
+
 .mat-mdc-form-field {
   width: -webkit-fill-available;
   width: -moz-available;
 }
+
 .custom-form-no-stretch {
+
   // background-color: transparent !important;
   @media (min-width: 600px) {
     width: unset !important;
   }
 }
+
 .bg-white {
   box-shadow: 0 0 3px 0 rgb(31 38 135 / 30%);
   @include border-radius;
   margin-inline: 1rem;
+
   @media (min-width: 600px) {
     margin-inline: 2rem;
   }
 }
+
 .font-weight-bold {
   font-weight: 600 !important;
 }
+
 .accordion-button {
   padding-block: 0.5em !important;
   color: $clr-dark;
   font-size: 0.9rem;
 }
+
 .info-heading {
   font-weight: bold;
 }
+
 .icon-small {
   width: 18px;
 }
 
 .banner {
-  background: rgba(0, 0, 0, 0.5) url(assets/img/vihari-room.jpg) center / cover
-    no-repeat fixed;
+  background: rgba(0, 0, 0, 0.5) url(assets/img/vihari-room.jpg) center / cover no-repeat fixed;
   background-blend-mode: multiply;
   min-height: 50vh;
 }
