--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -7,12 +7,8 @@
           <mat-form-field appearance="outline">
             <mat-label>Select Resort</mat-label>
             <mat-select required>
-              <mat-option value="VanaVihari, Maredumilli"
-                >Vanavihari, Maredumilli</mat-option
-              >
-              <mat-option value="Jungle Star, Valamuru"
-                >Jungle Star, Valamuru</mat-option
-              >
+              <mat-option value="VanaVihari, Maredumilli">Vanavihari, Maredumilli</mat-option>
+              <mat-option value="Jungle Star, Valamuru">Jungle Star, Valamuru</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -24,172 +20,96 @@
               <input matEndDate placeholder="Checkout date" />
             </mat-date-range-input>
             <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle
-              matSuffix
-              [for]="picker"
-            ></mat-datepicker-toggle>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
           </mat-form-field>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 position-relative">
           <mat-form-field appearance="outline">
             <mat-label>Guests</mat-label>
-            <input
-              type="text"
-              matInput
-              value="1 adult, 1 room"
-              data-bs-toggle="modal"
-              data-bs-target="#modalId"
-            />
+            <input type="text" matInput value="1 adult, 1 room" data-bs-toggle="modal" data-bs-target="#modalId" />
           </mat-form-field>
-        </div>
-        <!-- Modal -->
-        <div
-          class="modal fade position-relative"
-          id="modalId"
-          tabindex="-1"
-          aria-labelledby="modalTitleId"
-          aria-hidden="true"
-          role="dialog"
-          aria-labelledby="modalTitleId"
-          aria-hidden="true"
-          data-bs-backdrop="false"
-          data-bs-keyboard="false"
-        >
-          <div
-            class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm"
-          >
-            <div class="modal-content">
-              <div class="modal-body">
-                <!-- Angular Material form fields for adults, children, rooms -->
-                <div class="container">
-                  <!-- Adults section -->
-                  <div class="row mt-3">
-                    <label for="adults" class="col-sm-4 col-form-label"
-                      >Adults:</label
-                    >
-                    <div class="col-sm-8">
-                      <div class="input-group">
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="decrementAdults()"
-                        >
-                          -
-                        </button>
-                        <input
-                          type="number"
-                          id="adultsCount"
-                          name="adults"
-                          class="form-control text-center"
-                          [(ngModel)]="adultsCount"
-                        />
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="incrementAdults()"
-                        >
-                          +
-                        </button>
+          <!-- modal for adding guests, children and rooms -->
+          <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1" aria-labelledby="modalTitleId"
+            aria-hidden="true" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
+            data-bs-keyboard="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <!-- Angular Material form fields for adults, children, rooms -->
+                  <div class="container">
+                    <!-- Adults section -->
+                    <div class="row mt-3">
+                      <label for="adults" class="col-md-4 col-form-label">Adults:</label>
+                      <div class="col-md-8">
+                        <div class="input-group">
+                          <button class="btn btn-outline-secondary" type="button" (click)="decrementAdults()">
+                            -
+                          </button>
+                          <input type="number" id="adultsCount" name="adults" class="form-control text-center"
+                            [(ngModel)]="adultsCount" />
+                          <button class="btn btn-outline-secondary" type="button" (click)="incrementAdults()">
+                            +
+                          </button>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <!-- Children section -->
-                  <div class="row mt-3">
-                    <label for="children" class="col-sm-4 col-form-label"
-                      >Children:</label
-                    >
-                    <div class="col-sm-8">
-                      <div class="input-group">
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="decrementChildren()"
-                        >
-                          -
-                        </button>
-                        <input
-                          type="number"
-                          id="childrenCount"
-                          name="children"
-                          class="form-control text-center"
-                          [(ngModel)]="childrenCount"
-                        />
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="incrementChildren()"
-                          [disabled]="isMaxReached"
-                        >
-                          +
-                        </button>
-                      </div>
-                      <div *ngIf="isMaxReached" class="text-danger mt-2">
-                        Maximum limit reached for children ({{ maxChildren }}).
+                    <!-- Children section -->
+                    <div class="row my-3">
+                      <label for="children" class="col-md-4 col-form-label">Children:</label>
+                      <div class="col-md-8">
+                        <div class="input-group">
+                          <button class="btn btn-outline-secondary" type="button" (click)="decrementChildren()">
+                            -
+                          </button>
+                          <input type="number" id="childrenCount" name="children" class="form-control text-center"
+                            [(ngModel)]="childrenCount" />
+                          <button class="btn btn-outline-secondary" type="button" (click)="incrementChildren()"
+                            [disabled]="isMaxReached">
+                            +
+                          </button>
+                        </div>
+                        <div *ngIf="isMaxReached" class="text-danger mt-2">
+                          Maximum limit reached for children ({{ maxChildren }}).
+                        </div>
                       </div>
                     </div>
-                  </div>
-
-                  <!-- Age dropdowns -->
-                  <div id="ageDropdowns" class="row mt-3">
-                    <div
-                      class="col-md-6"
-                      *ngFor="let i of getChildrenCountArray()"
-                    >
-                      <select
-                        class="form-select mb-3"
-                        name="childAge"
-                        [(ngModel)]="selectedAges[i]"
-                      >
-                        <option value="" disabled>Select Age</option>
-                        <option value="0-2">0 - 2 years</option>
-                        <option value="3-5">3 - 5 years</option>
-                        <option value="6-10">6 - 10 years</option>
-                      </select>
+  
+                    <!-- Age dropdowns -->
+                    <div id="ageDropdowns" class="row">
+                      <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
+                        <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
+                          <option value="" disabled>Age required</option>
+                          <option value="0-2">0 - 2 years</option>
+                          <option value="3-5">3 - 5 years</option>
+                          <option value="6-10">6 - 10 years</option>
+                        </select>
+                      </div>
                     </div>
-                  </div>
-
-                  <!-- Rooms section -->
-                  <div class="row mt-3">
-                    <label for="rooms" class="col-sm-4 col-form-label"
-                      >Rooms:</label
-                    >
-                    <div class="col-sm-8">
-                      <div class="input-group">
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="decrementRooms()"
-                        >
-                          -
-                        </button>
-                        <input
-                          type="number"
-                          id="roomsCount"
-                          name="rooms"
-                          class="form-control text-center"
-                          [(ngModel)]="roomsCount"
-                        />
-                        <button
-                          class="btn btn-outline-secondary"
-                          type="button"
-                          (click)="incrementRooms()"
-                        >
-                          +
-                        </button>
+  
+                    <!-- Rooms section -->
+                    <div class="row">
+                      <label for="rooms" class="col-md-4 col-form-label">Rooms:</label>
+                      <div class="col-md-8">
+                        <div class="input-group">
+                          <button class="btn btn-outline-secondary" type="button" (click)="decrementRooms()">
+                            -
+                          </button>
+                          <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
+                            [(ngModel)]="roomsCount" />
+                          <button class="btn btn-outline-secondary" type="button" (click)="incrementRooms()">
+                            +
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-primary"
-                  data-bs-dismiss="modal"
-                >
-                  Done
-                </button>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    Done
+                  </button>
+                </div>
               </div>
             </div>
           </div>
