--- a/src/styles.scss
+++ b/src/styles.scss
@@ -166,10 +166,10 @@ img {
   margin-bottom: 15px;
 }
 
-label {
-  display: block;
-  font-weight: bold;
-}
+// label {
+//   display: block;
+//   font-weight: bold;
+// }
 
 input[type="date"],
 select {
