booking summary added

--- a/src/app/modules/resort-listing/resort-listing.component.html
+++ b/src/app/modules/resort-listing/resort-listing.component.html
@@ -139,7 +139,7 @@
                             <p></p>
                         </div>
                         <div class="col-4">
-                            <button class="btn btn-primary float-end">Proceed</button>
+                            <button class="btn btn-primary float-end" (click)="goToBooking()">Proceed</button>
                         </div>
                     </div>
                 </div>
