gallery section for demo in homepg

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -271,6 +271,24 @@
         </div>
       </div>
     </section>
+    <!-- lightbox gallery -->
+    <section class="gallery">
+      <div class="container">
+        <h2>Gallery</h2>
+            
+            <lightgallery class="row" [settings]="settings" [onBeforeSlide]="onBeforeSlide">
+              
+              <a class="col-md-3" href="assets/img/home-gallery/vanavihari-home-gallery-1.jpg">
+                <img alt="img1" src="assets/img/home-gallery/vanavihari-home-gallery-1.jpg" />
+              </a>
+              <a class="col-md-3" href="assets/img/home-gallery/vanavihari-home-gallery-2.jpg">
+                  <img alt="img1" src="assets/img/home-gallery/vanavihari-home-gallery-2.jpg" />
+              </a>
+              <!-- Add more images as needed -->
+            </lightgallery>
+            
+      </div>
+    </section>
 
     <!-- testimonials -->
     <section class="testimonials">
