--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -166,13 +166,13 @@
           <div class="col-md-8">
             <h2 class="mb-3">Gallery</h2>
             <div class="masonry-layout" id="vanavihari-gallery">
-              <!-- Loop through the image filenames array and generate HTML elements -->
-              <div *ngFor="let filename of imageFilenames" class="masonry-layout-item">
-                <lightgallery class="row" [settings]="settings" [onBeforeSlide]="onBeforeSlide">
-                  <!-- Use filename in the src attribute of the img tag -->
-                  <img [src]="'assets/img/home-gallery/' + filename" [alt]="filename" />
+
+              <lightgallery [settings]="settings" >
+                <a *ngFor="let item of imageFilenames" className="gallery-item" [attr.href]="item">
+                  <img className="img-responsive" src="{{ item }}" />
+                </a>
                 </lightgallery>
-              </div>
+              <!-- Loop through the image filenames array and generate HTML elements -->
             </div>
           </div>
           <div class="col-md-4">
@@ -222,18 +222,11 @@
           <div class="col-md-8">
             <h2 class="mb-3">Gallery</h2>
             <div class="masonry-layout" id="junglestar-gallery">
-              <!-- Loop through the image filenames array and generate HTML elements -->
-              <div *ngFor="let filename1 of imageFilenames1" class="masonry-layout-item">
-                <lightgallery class="row" [settings]="settings" [onBeforeSlide]="onBeforeSlide">
-                  <a href="assets/img/home-gallery-junglestar/{{ filename1 }}">
-                    <!-- Use filename in the src attribute of the img tag -->
-                    <img [src]="'assets/img/home-gallery-junglestar/' + filename1" [alt]="filename1" />
-                  </a>
+              <lightgallery [settings]="settings" >
+                <a *ngFor="let item of imageFilenames1" className="gallery-item" [attr.href]="item">
+                  <img className="img-responsive" src="{{ item }}" />
+                </a>
                 </lightgallery>
-                <!-- <div *ngFor="let filename1 of imageFilenames1" class="masonry-layout-item">
-                  <img [src]="'assets/img/home-gallery-junglestar/' + filename1" [alt]="filename1" />
-                </div> -->
-              </div>
             </div>
           </div>
           <div class="col-md-4">
