--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -27,7 +27,7 @@
         <div class="col-lg-3 position-relative">
           <mat-form-field appearance="outline">
             <mat-label>Guests</mat-label>
-            <input type="text" matInput value="1 adult, 1 room" data-bs-toggle="modal" data-bs-target="#modalId" />
+            <input type="text"  [value]="RoomValues" matInput data-bs-toggle="modal" data-bs-target="#modalId" />
           </mat-form-field>
           <!-- modal for adding guests, children and rooms -->
           <div class="modal fade position-absolute modal-searchbar" id="modalId" tabindex="-1" aria-labelledby="modalTitleId"
@@ -106,7 +106,7 @@
                   </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="getvalues(roomsCount,adultsCount)">
                     Done
                   </button>
                 </div>
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="col-auto">
-          <button mat-raised-button class="btn btn-primary">Search</button>
+          <button mat-raised-button class="btn btn-primary" type="button" >Search</button>
         </div>
       </div>
     </form>
