imgs carousel changes

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -3,7 +3,7 @@
     <section id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/Vanavihari-1.jpg" class="d-block w-100" alt="..." />
+          <img src="assets/img/Vihari-outer.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
             <h1 class="display-3">Vanavihari</h1>
