--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -69,7 +69,7 @@
 </app-confirmation-modal> -->
 
 <div class="modal fade position-static" [ngClass]="{ show: showTermsModal }" tabindex="-1" role="dialog"
-  style="display: block" aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
+aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
   data-bs-keyboard="false">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
