--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-light py-0 fixed-top bg-light">
+  <nav class="navbar navbar-light py-1 fixed-top bg-light">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
+      <button class="navbar-toggler border-0" type="button" (click)="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand ms-auto ms-md-0 me-lg-auto" href="#">
