home, colors changes

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,10 +1,10 @@
 <app-layout>
     <div class="main">
-        <div class="container my-5">
-          <div class="row">
+        <div class="container my-5 py-5">
+          <div class="row align-items-center">
             <div class="col-md-8 col-lg-6 mx-auto">
               <div class="card border-0">
-                  <div class="card-body p-4 p-sm-5">
+                  <div class="card-body p-3">
                     <div class="card-title text-center">
                       <p class="card-title fs-5">Sign into your</p>
                       <h5 class="mb-4">Vanavihari user account</h5>
