--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,10 +1,13 @@
 <app-layout>
   <div class="main">
-    <div class="container my-5">
-      <div class="row">
-        <div class="col-md-8 col-lg-6 mx-auto">
+    <div class="container my-5 py-5">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-md-5">
+          <img src="assets/images/login-image-left.svg" alt="login-image-left">
+        </div>
+        <div class="col-md-5">
           <div class="card border-0">
-            <div class="card-body p-4 p-sm-5">
+            <div class="card-body p-3">
               <div class="card-title text-center">
                 <p class="card-title fs-5">Create your</p>
                 <h5 class="mb-4">Vanavihari user account</h5>
@@ -44,12 +47,12 @@
                 <!-- Terms and Conditions Modal -->
 
 
-                <button mat-raised-button color="primary" class="w-100 mt-1">
+                <button mat-raised-button color="primary" class="w-100 mt-3">
                   Sign Up
                 </button>
 
               </form>
-              <div class="d-flex justify-content-between mt-5">
+              <div class="d-flex justify-content-center mt-5">
                 <!-- <a class="text-danger">Reset fields</a> -->
                 <a class="text-info-emphasis" (click)="goToSignin()">Already have an account? Sign In</a>
               </div>
