--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,3 +1,5 @@
+@use "./src/scss/base/" as *;
+
 #carouselExampleFade {
   .carousel-item {
     transition: all 3s ease-in-out;
@@ -18,6 +20,9 @@
 
     .carousel-caption {
       bottom: 5%;
+      h1{
+        color: $clr-light!important;
+      }
     }
 
     &.active {
@@ -34,7 +39,7 @@
 }
 
 .about {
-  background-color: rgb(205, 240, 185);
+  background-color: $clr-primary-light;
 }
 
 
