--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -101,12 +101,12 @@
             <i class="fa-solid fa-users"></i> Tribal Community
           </a>
         </li>
-        <li class="sidebar-item">
+        <!-- <li class="sidebar-item">
           <a class="sidebar-link" href="#">
             <i class="fa-regular fa-images"></i> Gallery
           </a>
-        </li>
-        <li class="sidebar-item">
+        </li> -->
+        <li class="sidebar-item d-none">
           <a class="sidebar-link" href="#footer">
             <i class="fa-regular fa-envelope"></i> Contact Us
           </a>
@@ -142,33 +142,33 @@
   <ng-content select=".main"></ng-content>
 </main>
 
-<footer id="footer" class="bg-dark text-white py-4">
-  <div class="container">
+<footer id="footer" class="footer py-4">
+  <div class="container pt-5">
     <div class="row">
       <div class="col-md-4">
         <h3>Links</h3><br>
         <ul class="list-unstyled">
-          <li><a class="text-decoration-none text-white" (click)="goToAboutUs()">About us</a></li>
-          <li><a class="text-decoration-none text-white" (click)="goToAwards()">Awards and News</a></li>
-          <li><a class="text-decoration-none text-white" (click)="goToPrivacy()">Privacy Policy</a></li>
-          <li><a class="text-decoration-none text-white" (click)="goToTerms()">Terms and Conditions</a></li>
+          <!-- <li><a class="text-decoration-none" (click)="goToAboutUs()">About us</a></li> -->
+          <li><a class="text-decoration-none" (click)="goToAwards()">Awards and News</a></li>
+          <li><a class="text-decoration-none" (click)="goToPrivacy()">Privacy Policy</a></li>
+          <li><a class="text-decoration-none" (click)="goToTerms()">Terms and Conditions</a></li>
         </ul>
       </div>
       <div class="col-md-4">
         <h3>Contact Info</h3>
-        <address>Co-ordinator(Complex Manager),<br>
+        <address style="line-height: 1.5;">Co-ordinator(Complex Manager),<br>
           Community Based Eco-Tourism, <br>
           Maredumilli.
         </address>
         <ul class="list-unstyled">
           <li> <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;
-            <a class="text-decoration-none text-light" href="mailto:info@vanavihari.com"
+            <a class="text-decoration-none" href="mailto:info@vanavihari.com"
               title="click to send email">info@vanavihari.com</a>
           </li>
           <li>
             <!-- font awesome email -->
             <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;
-            <a class="text-decoration-none text-light" href="tel:+919494151617" title="call">9494151617</a>
+            <a class="text-decoration-none" href="tel:+919494151617" title="call">9494151617</a>
           </li>
         </ul>
 
@@ -176,17 +176,31 @@
       </div>
       <div class="col-md-4">
         <h3>Send a message</h3>
-        <form class="contact-form">
-          <div class="mb-2">
-            <input type="text" class="form-control" placeholder="Your Name">
-          </div>
-          <div class="mb-2">
-            <input type="email" class="form-control" placeholder="Your Email">
-          </div>
-          <div class="mb-2">
-            <textarea class="form-control" placeholder="Your Message"></textarea>
-          </div>
-          <button type="submit" class="btn btn-light">Send Message</button>
+        <form >
+          <mat-form-field appearance="outline" class="mt-3">
+            <mat-label>Name</mat-label>
+            <input type="text" matInput required  name="name" placeholder="Full name" />
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="mt-3">
+            <mat-label>Mobile no.</mat-label>
+            <input type="tel" matInput required name="mobileNo" placeholder="Enter 10 digit mobile no." />
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="mt-3">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput required  name="email" placeholder="abc@gmail.com" />
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="mt-3">
+            <mat-label>Message</mat-label>
+            <textarea matInput
+                      cdkTextareaAutosize
+                      #autosize="cdkTextareaAutosize"
+                      cdkAutosizeMinRows="1"
+                      cdkAutosizeMaxRows="5"
+                      placeholder="Enter your message, enquiry, feedback or suggestion"></textarea>
+          </mat-form-field>
+          <button mat-raised-button color="primary" class="w-100 mt-1">
+            Send
+          </button>
         </form>
       </div>
     </div>
