--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -139,3 +139,8 @@ $nav-bar-height:10vh;
 .contact-form textarea {
     color: gray; 
 }
+.footer{
+  .container{
+    border-top: 1px solid rgba(0, 0, 0, 0.233);
+  }
+}
