--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -115,7 +115,7 @@
           </div>
         </div>
         <div class="col-auto">
-          <button mat-raised-button class="btn btn-primary" type="button" >Search</button>
+          <button mat-raised-button class="btn btn-primary" type="button" (click)="goToVanavihari()" >Search</button>
         </div>
       </div>
     </form>
