--- a/src/app/auth/sign-up/sign-up.component copy.html
+++ b/src/app/auth/sign-up/sign-up.component copy.html
@@ -12,28 +12,33 @@
                 <p class="card-title fs-5">Create your</p>
                 <h5 class="mb-4">Vanavihari user account</h5>
               </div>
-              <form [formGroup]="form" (ngSubmit)="onSubmit()">
+              <form #myForm="ngForm" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
-                  <input type="text" matInput required formControlName="full_name" placeholder="Enter full Name" />
+                  <input type="text" pattern="[a-zA-Z]*" matInput required formControlName="full_name" name="Full_Name" ngModel
+                    placeholder="Enter Name" />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input type="tel" matInput required formControlName="mobile_number" placeholder="Enter 10 digit mobile no." />
+                  <input type="tel" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel
+                    placeholder="Enter 10 digit mobile no." />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input type="email" matInput required formControlName="email_id" placeholder="abc@gmail.com" />
+                  <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel
+                    placeholder="abc@gmail.com" />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="password" matInput name="Password" required formControlName="password" placeholder="Enter Password" />
+                  <input type="password" matInput name="Password" required formControlName="password" ngModel
+                    placeholder="Enter Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" placeholder="Repeat Password" />
+                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password"
+                    ngModel placeholder="Repeat Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
@@ -107,7 +112,7 @@ aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
           <button type="button" class="btn btn-primary" >
             Disagree
           </button>
-          <button type="button" class="btn btn-primary">
+          <button type="button" class="btn btn-primary" (click)="agreeToTerms()">
             Agree
           </button>
         </div>
