--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -1,102 +1,197 @@
 <app-layout>
     <div class="main">
-        <br><br>
-<mat-horizontal-stepper>
-<mat-step>
-    <ng-template matStepLabel>Your Selection</ng-template>
-    <div class="flex-container">
-        
-        <div class="first-column">
-            
-            <div class="card">
-                <h3>Rainbow Cottage</h3>
-                <p>Club Road Mysore Main Road,Ooty, Tamilnadu 643001</p>
-                <p>Ratings: 4.5</p>
-                <p>
-                    Amenities:
-                    <span class="icon">📶</span> Wifi
-                    <span class="icon">✈️</span> Airport Shuttle
-                    <span class="icon">🍽️</span> Restaurant
-                </p>
+        <section class="booking-summary pb-5">
+            <div class="container">
+                <h2 class="mb-3">Booking Summary</h2>
+                <div class="row gap-4">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <h5><strong>Resort name:</strong> Vanavihari, Maredumilli</h5>
+                            <h6><strong>Cottage type:</strong> Wooden Cottage</h6>
+                            <p><strong>Room name: Hornbill</strong></p>
+                            <address>Vanavihari Eco-tourism Complex, Maredumilli, AP-533295.</address>
+                            <div class="map-container">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15212.133581651236!2d81.712357!3d17.601149!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1708738599849!5m2!1sen!2sin"
+                                    width="400" height="300" style="border: 0" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                            <p><strong>Rating:</strong> 4.5/5</p>
+                            <!-- <p>
+                                Amenities:
+                                <span class="icon">📶</span> Wifi
+                                <span class="icon">✈️</span> Airport Shuttle
+                                <span class="icon">🍽️</span> Restaurant
+                            </p> -->
+                        </div>
+                        <!-- Booking Details Card -->
+                        <div class="card">
+                            <h5>Your booking details</h5>
+                            <div class="d-flex">
+                                <div class="col">
+                                    <p>Check-in</p>
+                                    <h6>March 9 2024</h6>
+                                    <p>10:00 AM IST</p>
+                                </div>
+                                <div class="col">
+                                    <p>Check-out</p>
+                                    <h6>March 17 2024</h6>
+                                    <p>09:00 AM IST</p>
+                                </div>
+                            </div>
+                            <p>Duration of stay:<br><strong>1 week</strong></p>
+                        </div>
+                        <div class="card">
+                            <h5>Room & Guests Details</h5>
+                            <p>Total Number of Rooms: <span id="totalRooms">1</span></p>
+                            <p>Adults: 2</p>
+                            <p>Children: 0</p>
+                            <a class="font-weight-bold" (click)="goToVanavihari()">Change your selection</a>
+                        </div>
+                        <div class="card">
+                            <h5>Payment details</h5>
+                            <p><strong>Room price per night:</strong> INR 4000</p>
+                            <p><strong>Total no. of guests:</strong> 2</p>
+                            <!-- <p>Total room tarri: 5400</p> -->
+                            <p><strong>GST @12%:</strong> INR 480</p>
+                            <h4><strong>Total price:</strong> INR 6372</h4>
+                        </div>
+                        <!-- card for Cancellation fees -->
+                        <div class="card">
+                            <h5>Cancellation Policy</h5>
+                            <strong>Cancellation and Refund:</strong>
+                            <div class="table-responsive">
+                                <table class="table table-hover mt-3">
+                                    <thead>
+                                        <tr>
+                                            <th>Cancellation Timeframe</th>
+                                            <th>Refund Percentage</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>48 to 72 hours prior</td>
+                                            <td>90%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>24 to 48 hours prior</td>
+                                            <td>80%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Within 24 hours</td>
+                                            <td>No refund</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 me-auto mt-5 mt-md-0">
+                        <h5 class="mb-4" style="line-height: 1.5;">Check the details we have fetched from your user
+                            account Balachandiran!</h5>
+                        <!-- <h3>User Details</h3> -->
+                        <form>
+                            <mat-form-field appearance="outline">
+                                <mat-label>Guest Name</mat-label>
+                                <input type="text" matInput required value="Balachandiran B" />
+                            </mat-form-field>
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>Mobile no.</mat-label>
+                                <input type="tel" matInput required value="9840166419" />
+                            </mat-form-field>
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>Email</mat-label>
+                                <input type="email" matInput required value="tensketch285@gmail.com" />
+                            </mat-form-field>
+                            <!-- address -->
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>Address</mat-label>
+                                <input type="text" matInput required placeholder="Enter your address">
+                            </mat-form-field>
+                            <!-- city, state, country, pincode -->
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>City</mat-label>
+                                <input type="text" matInput required placeholder="Enter your city">
+                            </mat-form-field>
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>State</mat-label>
+                                <input type="text" matInput required placeholder="Enter your state">
+                            </mat-form-field>
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>Country</mat-label>
+                                <input type="text" matInput required placeholder="Enter your country">
+                            </mat-form-field>
+                            <mat-form-field appearance="outline" class="mt-3">
+                                <mat-label>Pincode</mat-label>
+                                <input type="tel" matInput required placeholder="Enter your pincode">
+                            </mat-form-field>
+                            <section class="booking-terms mt-4">
+                                <h5 class="mb-3">Review the terms before booking.</h5>
+                                <div class="row row-cols-1 row-cols-md-2 g-4">
+                                    <div class="col">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h6 class="card-title"><i class="fas fa-bookmark"></i> Booking and
+                                                    Reservation</h6>
+                                                <ul>
+                                                    <li>All bookings are contingent upon availability.</li>
+                                                    <li>Reservation confirmation necessitates a valid Government ID.
+                                                    </li>
+                                                    <li>Room bookings are non-transferable; reservations are exclusive
+                                                        to the original booker or group.</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h6 class="card-title"><i class="fas fa-money-bill-wave"></i> Payment
+                                                    and Pricing</h6>
+                                                <ul>
+                                                    <li>Full payment is required upon reservation, with accepted modes
+                                                        including cash, credit & debit cards, net banking, UPI, etc.
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h6 class="card-title"><i class="fas fa-clock"></i> Check-in and
+                                                    Check-out</h6>
+                                                <ul>
+                                                    <li>Check-in Time: Morning 10:00 AM (IST)</li>
+                                                    <li>Check-out Time: Morning 09:00 AM (IST)</li>
+                                                    <li>Early check-in and late check-out are subject to availability
+                                                        and may incur additional charges.</li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h6 class="card-title"><i class="fas fa-users"></i> Guest Conduct</h6>
+                                                <ul>
+                                                    <li>Guests are expected to conduct themselves with respect towards
+                                                        other guests and staff.</li>
+                                                    <li>Smoking and alcohol consumption are strictly prohibited within
+                                                        accommodation areas.</li>
+                                                    <li>Any disruptive behavior may lead to eviction without refund.
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+                            <button mat-raised-button color="primary" class="w-100 mt-3">Pay now</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <!-- Booking Details Card -->
-            <div class="card">
-                <h3>Booking Details</h3>
-                <p>Check-In/Out: March 8 - March 12 <br>3:00 PM - 11:00 AM</p>
-                <p>Total Days: 5</p>
-            </div>
-            <div class="card">
-                <h3>Room & Guests Details</h3>
-                <table>
-                  <tr>
-                    <td>Standard Room</td>
-                    <td>
-                      <input matInput type="number" min="0" value="1" id="standardRoomQty">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Deluxe Room</td>
-                    <td>
-                      <input matInput type="number" min="0" value="1" id="deluxeRoomQty">
-                    </td>
-                  </tr>
-
-                </table>
-                <p>Total Number of Rooms: <span id="totalRooms">2</span></p>
-                <p>Adults: 2</p>
-                <p>Children: 1</p>
-              
-            </div>
-            
-            
-            <div class="card">
-                <h3>Payment Details</h3>
-                <p>Price:  5400</p>
-                <p>GST @18%:  972</p>
-                <p>Total:   6372</p>
-            </div>
-        </div>
-
-        <div class="second-column">
-            <h3>User Details</h3>
-            <form class="user-form">
-                <mat-form-field appearance="outline">
-                    <mat-label>First Name</mat-label>
-                    <input matInput id="firstName" name="firstName" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Last Name</mat-label>
-                    <input matInput id="lastName" name="lastName" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Country</mat-label>
-                    <input matInput id="country" name="country" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Mobile</mat-label>
-                    <input matInput id="mobile" name="mobile" required>
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput type="email" id="email" name="email" required>
-                </mat-form-field>
-
-                <button mat-raised-button (click)="payNow()">Pay Now</button>
-            </form>
-        </div>
+        </section>
     </div>
-</mat-step>
-
-<!-- Step 2 -->
-<mat-step>
-    <ng-template matStepLabel>Final Step</ng-template>
-    <!-- Add any content for the final step if needed -->
-</mat-step>
-</mat-horizontal-stepper>
-</div>
 </app-layout>
