--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,15 +11,8 @@ html {
 }
 
 body {
-  // font-size: 0.875rem;
   // background-color: $clr-light;
   font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  // font-weight: ;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-  color: $clr-dark;
   overflow-x: hidden;
 
   &.dark-theme {
@@ -29,7 +22,8 @@ body {
 }
 
 a {
-  cursor: pointer;
+  // cursor: pointer;
+  color: $clr-primary!important;
 }
 
 img {
@@ -40,6 +34,11 @@ h1, h2, h3, h4, h5, h6{
   color: $clr-secondary;
 }
 
+.container{
+  @media(max-width:576px) {
+    padding-inline: 2rem;
+  }
+}
 .logo {
   width: min(65%, 200px);
 }
@@ -96,6 +95,7 @@ h1, h2, h3, h4, h5, h6{
   // -webkit-backdrop-filter: blur(8px);
   border-radius: 12px;
   // border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 1rem;
 }
 
 .form-control {
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .banner {
-  background: rgba(0, 0, 0, 0.5) url(assets/img/vihari-room.jpg) center / cover no-repeat fixed;
+  // background: rgba(0, 0, 0, 0.5) url(assets/img/vihari-room.jpg) center / cover no-repeat fixed;
   background-blend-mode: multiply;
   min-height: 50vh;
 }
@@ -188,4 +188,19 @@ select {
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  /* Aspect ratio 16:9 */
+  height: 0;
+
+  iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
 }
